--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,156 @@
-logs
-.idea
-node_modules
+# ========================================
+# 长沙楼市查询平台 - Git忽略文件
+# ========================================
+
+# ==================== 依赖目录 ====================
+node_modules/
+bower_components/
+jspm_packages/
+
+# ==================== 日志文件 ====================
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+pnpm-debug.log*
+
+# ==================== 运行时数据 ====================
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# ==================== 构建产物 ====================
+dist/
+build/
+.cache/
+.temp/
+.tmp/
+
+# ==================== 环境配置 ====================
+.env
+.env.local
+.env.*.local
+.env.development
+.env.production
+.env.test
+
+# ==================== 编辑器配置 ====================
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# ==================== 操作系统 ====================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ==================== 测试覆盖率 ====================
+coverage/
+*.coverage
+.nyc_output/
+lib-cov/
+
+# ==================== 数据文件 ====================
+src/data/*.json
+src/data/*.csv
+src/data/*.sql
+# 保留数据目录但忽略内容
+src/data/*
+!src/data/.gitkeep
+
+# ==================== SSL证书 ====================
+*.pem
+*.key
+*.crt
+*.csr
+*.p12
+src/data/server.key
+src/data/server.pem
+
+# ==================== 备份文件 ====================
+*.bak
+*.backup
+*.old
+*_backup/
+backup/
+
+# ==================== 其他 ====================
+# PM2
+.pm2/
+
+# npm
+package-lock.json
+.npm/
+
+# yarn
+yarn.lock
+.yarn/
+.yarn-integrity
+.pnp.*
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variable files
+.env.*.local
+
+# parcel-bundler cache
+.parcel-cache
+
+# Next.js
+.next
+out
+
+# Nuxt.js
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# ==================== 项目特定 ====================
+# 爬虫临时文件
+src/scripts/temp/
+
+# 上传文件
+uploads/
+
+# 临时数据
+temp/
