--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "tabWidth": 2,
-  "singleQuote": true,
   "semi": false,
-  "trailingComma": "all",
-  "printWidth": 120,
-  "endOfLine": "crlf"
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 100,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
